// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<li>
  <button
    class="option icon"
  >
    My option
  </button>
</li>
`;

exports[`The component should render in disabled state 1`] = `
<li>
  <button
    class="option icon"
    disabled=""
  >
    My option
  </button>
</li>
`;

exports[`The component should render in selected state 1`] = `
<li>
  <button
    class="option icon selected"
  >
    <span
      aria-label="su-checkmark"
      class="icon su-checkmark"
    />
    My option
  </button>
</li>
`;

exports[`The component should render with checkbox 1`] = `
<li>
  <button
    class="option checkbox"
  >
    <label
      class="label"
    >
      <span
        class="switch checkbox dark input"
      >
        <input
          type="checkbox"
        />
        <span />
      </span>
    </label>
    My option
  </button>
</li>
`;
